@@ -24,7 +24,9 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
+import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 @RequiredArgsConstructor
 //@bean 정의를 통해 의존성 주입 용이하도록
@@ -75,9 +77,10 @@ public class WebOAuthSecurityConfig implements WebMvcConfigurer {
                 .requestMatchers("/api/token").permitAll()
                 .requestMatchers("/api/refresh-token").permitAll()
                 .requestMatchers("/login/oauth2/code/google").permitAll() // 추가
+                .requestMatchers("/api/kakao/login").permitAll()
                 //테스트 권한 임시 허락
-                .requestMatchers("/**").permitAll()
-//                .requestMatchers("/api/**").authenticated()
+//                .requestMatchers("/**").permitAll()
+                .requestMatchers("/api/**").authenticated()
                 .anyRequest().permitAll()
         );
 
@@ -114,10 +117,11 @@ public class WebOAuthSecurityConfig implements WebMvcConfigurer {
     private CorsConfigurationSource corsConfigurationSource() {
         return request -> {
             CorsConfiguration corsConfiguration = new CorsConfiguration();
-            corsConfiguration.setAllowedOrigins(Collections.singletonList("*"));
+            corsConfiguration.setAllowedOrigins(List.of("https://emolog.kro.kr", "http://localhost:3000"));
             corsConfiguration.setAllowedMethods(Collections.singletonList("*"));
             corsConfiguration.setAllowedHeaders(Collections.singletonList("*"));
             corsConfiguration.setExposedHeaders(Collections.singletonList("*"));
+            corsConfiguration.setAllowCredentials(true);
             corsConfiguration.setMaxAge(3600L);
             return corsConfiguration;
         };
